fixed some styling issues causing word overlap in needs/offers pages, built match method for goodstypesorganization (cards), adjusted styling in dashboard to allow for longer descriptions

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -26,7 +26,9 @@ section.org-show {
   li.collection-item.offers-header,{
     background-color: #3EA4F0;
   }
-
+  li.card {
+    height: 105px;
+  }
   span.secondary-content,
   .offers-header,
   .needs-header {
