--- a/app/assets/stylesheets/needs.scss
+++ b/app/assets/stylesheets/needs.scss
@@ -19,3 +19,12 @@ div.card.needs {
 .card.highlight-need {
   border: 3px solid orange;
 }
+
+.needs-offers-type {
+  color: white;
+}
+
+div.card-action a {
+  position: absolute;
+  right: 0;
+}
